Remove exclamation mark from page title

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Movies List!</title>
+    <title>Movies List</title>
 </head>
 <body>
     <h1>Movies List</h1>
