--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Movies List</title>
+    <title>Movies </title>
 </head>
 <body>
-    <h1>Movies List</h1>
+    <h1>Movies</h1>
     <a href="{% url 'add_movie' %}">Add New Movie</a>
     <hr>
 
